--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,21 @@
 # top level stuff you probably don't need to touch
 highlighter: rouge
-markdown: rdiscount
 rdiscount:
   extensions: [smart]
 permalink: /:title.html
 paginate: 5
 gems: [jekyll-paginate]
-port: 3000
+port: 4000
 safe: true
 
 
 # edit here to achieve your personal greatness
 url: http://username.github.io/
-baseurl: /sustain/
 title: Vaios Laschos
 author: Vaios Laschos
 description: Personal blog and resume
 avatar: profile.jpg
-email: yourname@email.com
-github: biomadeira/sustain # username
+email: artnoage@gmail.com
 twitter: username
 linkedin: username
 stackoverflow: username   #e.g: users/2735833/proton1h1
