--- a/_config.yml
+++ b/_config.yml
@@ -10,18 +10,13 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: http://username.github.io/
+url: http://artnoage.github.io/
 title: Vaios Laschos
 author: Vaios Laschos
 description: Personal blog and resume
 avatar: profile.jpg
 email: artnoage@gmail.com
-twitter: username
-linkedin: username
-stackoverflow: username   #e.g: users/2735833/proton1h1
-#Comment out if you don't want disqus 
-disqus: username
-google_analytics: UA-69391421-1
+
 
 
 # needed for travis-ci build
