--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title: Vaios Laschos
 author: Vaios Laschos
 description: Personal blog and resume
 avatar: profile.jpg
-email: artnoage@gmail.com
+email: Vaios.laschos@wias-berlin.de
 
 
 
